--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,76 +1,105 @@
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Index.css" />
-    <title>LOGIN</title>
-    <link rel="stylesheet" href="style.css">
+<%- include('header') -%>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
+    <body>
+        <div class="centralcentral">
+        <h3 class="centreHead">StreamParty</h3>
+        <div class="login-box">
+            <div class="lb-header">
+                <a href="#" id="signup-box-link">Login</a>
+                <a href="#" class="active" id="login-box-link">Sign Up</a>
+            </div>
 
-<body>
-
-    <div class="popup-screen">
-        <div class="popup-box">
-            <i class="fas fa-times close-btn"></i>
-            <form class="log-form">
-                <h2>LOGIN FORM</h2>
-                <label class="label">Username </label>
-                <input type="text" name="username" id="username" placeholder="Enter Name" required /><br><br>
-                <label class="label">Password </label>
-                <input type="text" name="password" id="password" placeholder="Enter Password" required /><br><br>
-                <!-- <input type="submit" class="btn-primary" value="SUBMIT"  name="submit"> -->
-                <div>
-                    <button class="btn-primary log-submit-btn">Login</button>
-                    <button class="btn-primary reg-submit-btn">Register</button>
+            <form  action="/login" method="post" class="email-signup">
+                <div class="u-form-group">
+                    <input type="email" name="username" placeholder="Email" />
+                </div>
+                <div class="u-form-group">
+                    <input type="password" name="password" placeholder="Password" />
+                </div>
+                <div class="u-form-group">
+                    <button id="log-submit-btn">Log in</button>
+                </div>
+                <div class="u-form-group">
+                    <a href="/forgotpassword" class="forgot-password">Forgot password?</a>
+                </div>
+            </form>
+            <form action="/register" method="post" class="email-login">
+                <div class="u-form-group">
+                    <input type="email" name="username" placeholder="Email" />
+                </div>
+                <div class="u-form-group">
+                    <input type="password" name="password" placeholder="Imagine a password" />
+                </div>
+                <div class="u-form-group">
+                    <button id="reg-submit-btn">Register</button>
                 </div>
             </form>
         </div>
     </div>
-
-    <script>
-        logSubmit = document.getElementById('log-submit-btn');
-        regSubmit = document.getElementById('reg-submit-btn');
-
-        submit.addEventListener('click', (e) => {
-            e.preventDefault();
-
-            uname = document.getElementById('username');
-            pword = document.getElementById('password');
-
-            fetch('login route', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    "uname": uname.value,
-                    "pword": pword.value
-                })
+        <script>
+            //---------------------------------------
+            // To style the login/register box
+            $(".email-signup").hide();
+            $("#signup-box-link").click(function () {
+                $(".email-login").fadeOut(100);
+                $(".email-signup").delay(100).fadeIn(100);
+                $("#login-box-link").removeClass("active");
+                $("#signup-box-link").addClass("active");
             });
-        })
-        regSubmit.addEventListener('click', (e)=>{
-            e.preventDefault();
+            $("#login-box-link").click(function () {
+                $(".email-login").delay(100).fadeIn(100);;
+                $(".email-signup").fadeOut(100);
+                $("#login-box-link").addClass("active");
+                $("#signup-box-link").removeClass("active");
+            });
+            //---------------------------------------
+            logSubmit = document.getElementById('log-submit-btn');
+            regSubmit = document.getElementById('reg-submit-btn');
 
-            uname = document.getElementById('username');
-            pword = document.getElementById('password');
+            // submit.addEventListener('click', (e) => {
+            //     e.preventDefault();
 
-            fetch('registration route', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    "uname": uname.value,
-                    "pword": pword.value
-                })
-            })
-            .then(response => response.json())
-            .then(data =>{
-                console.log(data);
-            })
-        })
-    </script>
-</body>
+            //     uname = document.getElementById('emaillog');
+            //     pword = document.getElementById('passlog');
 
-</html>
+            //     fetch('/login', {
+            //         method: 'POST',
+            //         headers: {
+            //             'Content-Type': 'application/json'
+            //         },
+            //         body: JSON.stringify({
+            //             "username": uname.value,
+            //             "password": pword.value
+            //         })
+            //     });
+            // })
+            // regSubmit.addEventListener('click', (e) => {
+            //     e.preventDefault();
+            //     console.log('reg clicked');
+
+
+            //     email = document.getElementById('emailreg');
+            //     pword = document.getElementById('passreg');
+
+            //     fetch('/register', {
+            //         method: 'POST',
+            //         headers: {
+            //             'Content-Type': 'application/json'
+            //         },
+            //         body: JSON.stringify({
+            //             "username": email.value,
+            //             "password": pword.value
+            //         })
+            //     })
+            //     // .then(response => response.json())
+            //     // .then(data =>{
+            //     //     console.log(data);
+            //     // })
+            // })
+            // link for code pen from where design inspired - https://codepen.io/vikasverma93/pen/qBKKBR
+        </script>
+    </body>
+
+    </html>
